@@ -1,3 +1,8 @@
+WIP
+-----------------------------
+* Misc
+  - Fixed an issue that would prevent Track Info Editor from opening while "API state override" is activated.
+
 2.28.0 (2025-05-05)
 -----------------------------
 * Major change
